samples/_failures_safe/1761546984_5b9521_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2be1a28c.c: In function ‘main’:
./samples/SAFE/__tmp_2be1a28c.c:168:5: error: expected expression at end of input
  168 |     if (scanf("%d", &
      |     ^~
./samples/SAFE/__tmp_2be1a28c.c:168:5: error: expected declaration or statement at end of input
